# hw3-charazar

./: .gitignore  README.md  ai_documentation.txt  makefile  myst.yml  pyproject.toml
ligotools/: __init__.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
myst_env/conda-meta/: _libgcc_mutex-0.1-conda_forge.json  _openmp_mutex-4.5-2_gnu.json  alsa-lib-1.2.14-hb9d3cd8_0.json  asttokens-3.0.0-pyhd8ed1ab_1.json  brotli-1.2.0-h41a2e66_0.json  brotli-bin-1.2.0-hf2c8021_0.json  bzip2-1.0.8-hda65f42_8.json  c-ares-1.34.5-hb9d3cd8_0.json  ca-certificates-2025.11.12-hbd8a1cb_0.json  cached-property-1.5.2-hd8ed1ab_1.json  cached_property-1.5.2-pyha770c72_1.json  cairo-1.18.4-h3394656_0.json  certifi-2025.8.3-pyhd8ed1ab_0.json  comm-0.2.3-pyhe01879c_0.json  contourpy-1.3.0-py39h74842e3_2.json  cycler-0.12.1-pyhd8ed1ab_1.json  cyrus-sasl-2.1.28-hd9c7081_0.json  dbus-1.13.6-h5008d03_3.json  debugpy-1.8.16-py39haef64b4_0.json  decorator-5.2.1-pyhd8ed1ab_0.json  double-conversion-3.3.1-h5888daf_0.json  exceptiongroup-1.3.0-pyhd8ed1ab_0.json  executing-2.2.0-pyhd8ed1ab_0.json  expat-2.7.1-hecca717_0.json  font-ttf-dejavu-sans-mono-2.37-hab24e00_0.json  font-ttf-inconsolata-3.000-h77eed37_0.json  font-ttf-source-code-pro-2.038-h77eed37_0.json  font-ttf-ubuntu-0.83-h77eed37_3.json  fontconfig-2.15.0-h7e30c49_1.json  fonts-conda-ecosystem-1-0.json  fonts-conda-forge-1-hc364b38_1.json  fonttools-4.59.1-py39heb7d2ae_0.json  freetype-2.14.1-ha770c72_0.json  graphite2-1.3.14-hecca717_2.json  h5py-3.12.1-nompi_py39h394ba53_103.json  harfbuzz-11.0.0-h76408a6_0.json  history  (+147 more)
(+257 files in other folders)
