[build-system]
requires = [
    "numpy==2.0",
    "scipy==1.13",
    "matplotlib==3.9",
    "setuptools == 70" ]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC) and Char Tomlinson", email="cbrtomlinson@berkeley.edu" },
]
description = "A Python package to install ligo data"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "numpy==2.0", 
    "scipy==1.13",
    "h5py==3.12",
    "matplotlib==3.9",
    "scipy==1.13",
    "ipykernel==6.29"
    ]

license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "ligotools","ligo"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-charazar"
Issues = "https://github.com/UCB-stat-159-f25/hw3-charazar/issues"

[tool.setuptools]
packages = ["ligotools"]
license-files = ["LICEN[CS]E*"]

[tool.setuptools.dynamic]
version = {attr = "ligotools.__version__"}